fixed cyan tab focus to be orange, short title so no overflow into buttons causing column arrangement

--- a/to-do-list/src/app/task-list/task-list.component.scss
+++ b/to-do-list/src/app/task-list/task-list.component.scss
@@ -1,11 +1,10 @@
 @use '@angular/material' as mat;
 @import './../../styles.scss';
 
-
-// Customize the entire app. Change :root to your selector if you want to scope the styles.
-mat-tab-group {
+table {
   @include mat.tabs-overrides((
     active-indicator-color: $orange,
+    active-focus-indicator-color: $orange,
     divider-color: red,
   ));
 }
